remove problematic "fest" jars and associated unit tests.