@@ -198,7 +198,6 @@ compileTestJava {
         options.compilerArgs = [
             '--module-path',  classpath.asPath,
             '--add-modules', 'junit',
-            '--add-modules', 'fest.swing',
             '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
         ]
         classpath = files()
@@ -212,10 +211,8 @@ test {
             '-Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize',
             '--module-path',  classpath.asPath,
             '--add-modules', 'junit',
-            '--add-modules', 'fest.swing',
             '--add-modules', 'ALL-MODULE-PATH',
             '--add-reads', "$moduleName=junit",
-            '--add-reads', "$moduleName=fest.swing",
             '@scripts/test_suite.args',
             '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir, sourceSets.main.output.resourcesDir).asPath,
         ]
